--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "test": "vitest",
         "build": "tsc",
         "format": "prettier --write .",
-        "lint": "eslint . --ext .ts",
+        "lint": "eslint src & eslint tests",
         "coverage": "vitest run --coverage"
     },
     "devDependencies": {
