--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
         "@eslint/js": "^9.39.0",
         "@eslint/json": "^0.13.2",
         "@types/express": "^5.0.5",
-        "@types/lodash": "^4.17.20",
         "@types/node": "^24.9.2",
         "@vitest/coverage-v8": "^4.0.6",
         "eslint": "^9.39.0",
@@ -33,9 +32,10 @@
         "vitest": "^4.0.6"
     },
     "dependencies": {
-        "lodash": "^4.17.21",
+        "radash": "^12.1.1",
         "socket.io-client": "^4.8.1",
-        "socket.io-msgpack-parser": "^3.0.2"
+        "socket.io-msgpack-parser": "^3.0.2",
+        "zod": "^4.1.12"
     },
     "files": [
         "dist/**/*"
